--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
-version: "3.8"
+# version: "3.8"
 
+# services:
+#   frontend:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - "3003:80"
+#     restart: always
+version: '3'
 services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
-      - "3003:80"
-    restart: always
+      - "3003:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    restart: unless-stopped
