--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "immer": "^9.0.12",
+    "lucide-react": "^0.503.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
     "remixicon": "^2.5.0",
@@ -44,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   }
 }
