--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^5.5.5",
     "immer": "^9.0.12",
     "lucide-react": "^0.503.0",
     "react": "^17.0.2",
